manifests/nexus/nexus.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: nexus
  labels:
    section: tools
    app: nexus

---
apiVersion: v1
kind: Service
metadata:
  name: nexus
  namespace: nexus
  labels:
    app: nexus
    section: tools
spec:
  ports:
    - name: http-main
      port: 8081
      protocol: TCP
      targetPort: 8081
  selector:
    app: nexus
    section: tools
  clusterIP: None

---
apiVersion: apps/v1
kind: StatefulSet
metadata:
    name: nexus
    namespace: nexus
    labels:
      app: nexus
      section: tools
spec:
  selector:
    matchLabels:
      app: nexus
      section: tools
  serviceName: nexus
  template:
    metadata:
      labels:
        app: nexus
        section: tools
    spec:
      containers:
        - name: nexus
          image: sonatype/nexus3:3.68.1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8081
              protocol: TCP
            - containerPort: 8083
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /
              port: 8081
            initialDelaySeconds: 30
            periodSeconds: 30
            failureThreshold: 6
          livenessProbe:
            httpGet:
              path: /
              port: 8081
            initialDelaySeconds: 30
            periodSeconds: 30
            failureThreshold: 6
          resources:
            requests:
              memory: "2Gi"
              cpu: "1"
            limits:
              memory: "2Gi"
              cpu: "1.5"
          volumeMounts:
            - mountPath: /nexus-data
              name: nexus-data
  volumeClaimTemplates:
  - metadata:
      name: nexus-data
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 8Gi

---
apiVersion: v1
kind: Service
metadata:
  name: nexus-0
  namespace: nexus
  labels:
    app: nexus
    section: tools
spec:
  ports:
    - name: http-main
      port: 8081
      protocol: TCP
      targetPort: 8081
    - name: http-docker-rep
      port: 8083
      protocol: TCP
      targetPort: 8083
  selector:
    app: nexus
    section: tools
    statefulset.kubernetes.io/pod-name: nexus-0

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nexus
  namespace: nexus
  labels:
    app: nexus
    section: tools
  annotations:
    cert-manager.io/cluster-issuer: dev-ca-issuer
    cert-manager.io/common-name: nexus.dpetrenko.ru
    cert-manager.io/subject-organizations: "home dev lab"
    cert-manager.io/subject-countries: "RU"
    cert-manager.io/subject-localities: "Voronezh"
    cert-manager.io/duration: "9125h"
    cert-manager.io/renew-before: "360h"
    cert-manager.io/usages: "server auth"
    cert-manager.io/private-key-algorithm: RSA
    cert-manager.io/private-key-encoding: "PKCS8"
    cert-manager.io/private-key-size: "4096"
    cert-manager.io/private-key-rotation-policy: Always
    nginx.ingress.kubernetes.io/proxy-body-size: 1g
spec:
  ingressClassName: "system-ingress"
  rules:
    - host: nexus.dpetrenko.ru
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nexus-0
                port:
                  number: 8081
    - host: repo.dpetrenko.ru
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nexus-0
                port:
                  number: 8083
  tls:
    - hosts:
      - nexus.dpetrenko.ru
      - repo.dpetrenko.ru
      secretName: nexus-tls
